# python_and_sql

./: .gitignore  README.md  main.py  pyproject.toml
app/Aula01/: README.md  main.py  variaveis.py
app/Aula02/: README.md  booleanos.py  float.py  inteiros.py  strings.py  treatment_errors.py
app/Aula03/: if.py
