[tool.poetry]
name = "python-sql"
version = "1.0"
description = "Ambiente virtual de python"
authors = ["datafoia <datafoia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
